# remove_empty_directories-python

./: README.md  pyproject.toml  remove_empty_directories.py
