[tool.poetry]
name = "remove-empty-directories"
version = "0.1.1"
description = "remove empty directories"
authors = ["Cologler <skyoflw@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
remove-empty-directories = 'remove_empty_directories:main'

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
