[tool.poetry]
name = "remove-empty-directories"
version = "0.2.0"
description = "remove empty directories"
authors = ["Cologler <skyoflw@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
remove-empty-directories = 'remove_empty_directories:main'

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
